# khaslana

./: AGENTS.md  Cargo.toml  LICENSE  README.md  agent.md  build.rs
docs/: workflows.md
src/: assets.rs  browse_view.rs  credentials.rs  diff_view.rs  git.rs  history_view.rs  lib.rs  main.rs  proxy.rs  proxy_view.rs  rebase_view.rs  remote_branch_operation.rs  sidebar_view.rs  stash_view.rs  storage.rs  submodule_view.rs  system.rs  tasks.rs  text_input.rs  types.rs  ui_helpers.rs  workflow.rs  workflow_view.rs
src/conflicts/: mod.rs
src/git/: browse.rs  conflicts.rs  rebase.rs  stash.rs  submodule.rs
src/types/: browse.rs  conflicts.rs
src/ui/: components.rs  icons.rs  mod.rs  theme.rs
src/workflow/: expressions.rs  remote_branch_guard.rs
