[package]
name = "khaslana"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-channel = "2"
chardetng = "1"
directories = "6"
encoding_rs = "0.8"
git2 = { version = "0.21", features = ["https", "ssh"] }
gpui = { package = "gpui-ce", version = "0.3" }
json5 = "1"
keyring = "4"
keyring-core = "1"
rfd = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
yororen_ui = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-resource = "3"
